--- a/.lamvery.yml
+++ b/.lamvery.yml
@@ -4,9 +4,9 @@ versioning: false
 default_alias: master
 configuration:
   name: kipi-mabi-crawler
-  runtime: python2.7
+  runtime: nodejs4.3
   role: arn:aws:iam::793539351801:role/lamvery-test
-  handler: lambda_function.lambda_handler
+  handler: crawler.lambda_handler
   description: Kipi Web Crawler
   timeout: 10
   memory_size: 128
