--- a/circle.yml
+++ b/circle.yml
@@ -1,25 +1,19 @@
 machine:
-  python:
-    version: 2.7
+  node:
+    version: 6.3.0
+    post:
+      - npm install -g npm@4
+    timezone: Asia/Tokyo
 
 dependencies:
   pre:
     - |
-      virtualenv .venv
-      source .venv/bin/activate
-      pip install -r requirements.txt
-
-  test:
-    override:
-      - |
-        source .venv/bin/activate
-        flake8 lambda_function.py
+      npm install
 
 deployment:
   master-head:
     branch: master
     commands:
       - |
-        source .venv/bin/activate
         lamvery deploy
 
