--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,11 @@ machine:
     version: 6.3.0
   timezone: Asia/Tokyo
 
+test:
+  pre:
+    - echo "(」・ω・)」"
+    - echo "(/・ω・)/"
+
 dependencies:
   pre:
     - |
